style.css
@import url('https://fonts.googleapis.com/css?family=Lato');

* {
  box-sizing: border-box;
}

html, body {
  height: 100%;
  margin: 0;
}

html {
  font-family: 'Lato', sans-serif;
  background: black;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
}

.bg {
  position: absolute;
  height: 100%;
  width: 100%;
  background: url('https://static.pexels.com/photos/25316/pexels-photo-25316.jpg') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;

  opacity: 0;
  transition: opacity 1s;
}

.bg.loaded {
  opacity: 1;
}

h2, h3 {
  margin-top: 0;
  margin-bottom: 15px;
  text-align: center;
}

h3 {
  margin-bottom: 30px;
}

hr {
  margin: 30px;
}

.content {
  width: 400px;
  padding: 30px;
  background: rgba(30, 31, 40, 0.49);
  border: 3px solid white;
  color: white;
  z-index: 1;
}

.profiles {
  display: flex;
  justify-content: space-between;
}

.profiles img {
  height: 24px;
}

